--- a/DementiaHelper/DementiaHelper/DementiaHelper.Droid/packages.config
+++ b/DementiaHelper/DementiaHelper/DementiaHelper.Droid/packages.config
@@ -9,6 +9,7 @@
   <package id="Syncfusion.Xamarin.SfSchedule.Android" version="15.1.0.41" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.CustomTabs" version="23.0.1.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid60" />
@@ -16,5 +17,6 @@
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid70" />
-  <package id="Xamarin.Forms" version="2.3.4.224" targetFramework="monoandroid71" />
+  <package id="Xamarin.Auth" version="1.4.1.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="monoandroid60" />
 </packages>
