--- a/DementiaHelper/DementiaHelper/DementiaHelper.iOS/packages.config
+++ b/DementiaHelper/DementiaHelper/DementiaHelper.iOS/packages.config
@@ -1,10 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ExifLib.PCL" version="1.0.1" targetFramework="xamarinios10" />
+  <package id="PCLCrypto" version="2.0.147" targetFramework="xamarinios10" />
+  <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="xamarinios10" />
+  <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="xamarinios10" />
+  <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="xamarinios10" />
+  <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="xamarinios10" />
   <package id="Syncfusion.Xamarin.SfNumericUpDown" version="15.1.0.41" targetFramework="xamarinios10" />
   <package id="Syncfusion.Xamarin.SfNumericUpDown.IOS" version="15.1.0.41" targetFramework="xamarinios10" />
   <package id="Syncfusion.Xamarin.SfSchedule" version="15.1.0.41" targetFramework="xamarinios10" />
   <package id="Syncfusion.Xamarin.SfSchedule.IOS" version="15.1.0.41" targetFramework="xamarinios10" />
+  <package id="Validation" version="2.2.8" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.3.4.224" targetFramework="xamarinios10" />
+  <package id="Xamarin.Auth" version="1.4.1.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="xamarinios10" />
 </packages>
