--- a/DementiaHelper/DementiaHelper/DementiaHelper/packages.config
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/packages.config
@@ -7,12 +7,15 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wp8+wpa81" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="PCLCrypto" version="2.0.147" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Portable.BouncyCastle" version="1.8.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Portable.JWT" version="1.0.5" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="portable45-net45+win8+wp8+wpa81" developmentDependency="true" />
   <package id="Syncfusion.Xamarin.SfNumericUpDown" version="15.1.0.41" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Syncfusion.Xamarin.SfSchedule" version="15.1.0.41" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Validation" version="2.2.8" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
-  <package id="Xamarin.Forms" version="2.3.4.224" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.Auth" version="1.4.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
