--- a/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
@@ -40,11 +40,13 @@
     </Compile>
     <Compile Include="Model\ApplicationUser.cs" />
     <Compile Include="Model\CalenderTask.cs" />
+    <Compile Include="Model\ChatGroup.cs" />
     <Compile Include="Model\ChatMessage.cs" />
     <Compile Include="Model\Contact.cs" />
     <Compile Include="Model\GalleryImage.cs" />
     <Compile Include="Model\Message.cs" />
     <Compile Include="Model\Note.cs" />
+    <Compile Include="Model\Relative.cs" />
     <Compile Include="Model\ShoppingList.cs" />
     <Compile Include="Behaviors\BehaviorBase.cs" />
     <Compile Include="Behaviors\EventToCommandBehavior.cs" />
@@ -52,7 +54,9 @@
     <Compile Include="Model\Citizen.cs" />
     <Compile Include="Model\UserInformation.cs" />
     <Compile Include="PageModels\CalenderPageModel.cs" />
+    <Compile Include="PageModels\ChatTabPageModel.cs" />
     <Compile Include="PageModels\ConnectToCitizenPageModel.cs" />
+    <Compile Include="PageModels\ChoosePrimaryRelativePageModel.cs" />
     <Compile Include="PageModels\ConnectToNursingHomePageModel.cs" />
     <Compile Include="PageModels\CreateShoppingItemPageModel.cs" />
     <Compile Include="PageModels\ChatPageModel.cs" />
@@ -65,6 +69,12 @@
     <Compile Include="PageModels\NotePageModel.cs" />
     <Compile Include="Pages\CalenderPage.xaml.cs">
       <DependentUpon>CalenderPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ChatTabPage.xaml.cs">
+      <DependentUpon>ChatTabPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ChoosePrimaryRelativePage.xaml.cs">
+      <DependentUpon>ChoosePrimaryRelativePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\ConnectToNursingHomePage.xaml.cs">
       <DependentUpon>ConnectToNursingHomePage.xaml</DependentUpon>
@@ -195,8 +205,9 @@
       <HintPath>..\..\packages\PropertyChanged.Fody.1.52.1\lib\portable-net4+sl4+wp8+win8+wpa81+MonoAndroid16+MonoTouch40\PropertyChanged.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="System.Net.Http">
-      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETPortable\v4.5\System.Net.Http.dll</HintPath>
+    <Reference Include="System.Net.Http, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http.Extensions, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.Extensions.dll</HintPath>
@@ -339,6 +350,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pages\NotePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\ChoosePrimaryRelativePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\ChatTabPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
